user login changed to company login and ui fixses