@@ -1,141 +1,171 @@
 package com.startupocean.Startup.Collaboration.Portal.service;
 
 import com.startupocean.Startup.Collaboration.Portal.dto.*;
-import com.startupocean.Startup.Collaboration.Portal.entity.User;
-import com.startupocean.Startup.Collaboration.Portal.repository.UserRepository;
+import com.startupocean.Startup.Collaboration.Portal.entity.Company;
+import com.startupocean.Startup.Collaboration.Portal.repository.CompanyRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.Random;
-import java.util.Collections;
+import java.util.concurrent.ConcurrentHashMap;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 @Service
 @RequiredArgsConstructor
 public class AuthService {
 
-    private final UserRepository userRepository;
     private final JwtService jwtService;
+    private final CompanyRepository companyRepository;
     private final EmailService emailService;
 
+    private static final Logger log =
+            LoggerFactory.getLogger(AuthService.class);
+
     @Transactional
-    public ApiResponse register(RegisterRequest request) {
-        if (userRepository.existsByEmail(request.getEmail())) {
-            return new ApiResponse(false, "Email already registered", null);
+    public ApiResponse sendOtp(String email) {
+
+        log.info("OTP request received for email: {}", email);
+        if (companyRepository.findByEmailAndIsActiveTrue(email).isPresent()) {
+            log.warn("OTP blocked - account already exists: {}", email);
+
+            return new ApiResponse(
+                    false,
+                    "Account already exists with this Email",
+                    null
+            );
         }
 
-        User user = new User();
-        user.setName(request.getName());
-        user.setEmail(request.getEmail());
-        user.setRole(User.UserRole.valueOf(request.getRole()));
-        user.setPhoneNumber(request.getPhoneNumber());
-        user.setIsActive(true);
-        user.setIsVerified(false);
-        user.setProfileComplete(false);
-
         String otp = generateOTP();
-        user.setOtpCode(otp);
-        user.setOtpExpiry(LocalDateTime.now().plusMinutes(10));
+        String k = key(email);
 
-        userRepository.save(user);
-        emailService.sendOtpEmail(user.getEmail(), otp);
+        log.debug("Generated OTP for {} -> {}", email, otp);
 
-        return new ApiResponse(true, "Registration successful. Please verify your email with OTP.", null);
+        otpStore.put(k, otp);
+        otpExpiryStore.put(k,
+                LocalDateTime.now().plusMinutes(10));
+
+        log.info("OTP stored and expiry set for {}", email);
+
+        emailService.sendOtpEmail(email, otp);
+
+        log.info("OTP email sent successfully to {}", email);
+
+        return new ApiResponse(
+                true,
+                "OTP sent successfully",
+                null
+        );
     }
 
     @Transactional
     public ApiResponse verifyOtp(OtpRequest request) {
-        User user = userRepository.findByEmail(request.getEmail())
-                .orElseThrow(() -> new RuntimeException("User not found"));
 
-        if (user.getOtpCode() == null || !user.getOtpCode().equals(request.getOtp())) {
-            return new ApiResponse(false, "Invalid OTP", null);
-        }
+        String otpKey = key(request.getEmail());
 
-        if (user.getOtpExpiry().isBefore(LocalDateTime.now())) {
-            return new ApiResponse(false, "OTP expired", null);
-        }
+        String storedOtp = otpStore.get(otpKey);
+        LocalDateTime expiry = otpExpiryStore.get(otpKey);
 
-        user.setIsVerified(true);
-        user.setOtpCode(null);
-        user.setOtpExpiry(null);
-        userRepository.save(user);
+        if(storedOtp == null || !storedOtp.equals(request.getOtp()))
+            return new ApiResponse(false,"Invalid OTP",null);
 
-        var jwtToken = jwtService.generateToken(
+        if(expiry.isBefore(LocalDateTime.now()))
+            return new ApiResponse(false,"OTP expired",null);
+
+        otpStore.remove(otpKey);
+        otpExpiryStore.remove(otpKey);
+
+        Map<String,Object> claims = new HashMap<>();
+
+        String jwtToken = jwtService.generateToken(
+                claims,
                 new org.springframework.security.core.userdetails.User(
-                        user.getEmail(),
-                        "", // No password
-                        java.util.Collections.emptyList()
+                        request.getEmail(),
+                        "",
+                        java.util.List.of()
                 )
         );
 
-        AuthResponse authResponse = new AuthResponse(
-                jwtToken,
-                user.getName(),
-                user.getEmail(),
-                user.getRole().name(),
-                user.getUserId(),
-                user.getIsVerified(),
-                user.getProfileComplete()
-        );
-
-        return new ApiResponse(true, "Email verified successfully", authResponse);
+        return new ApiResponse(true,"OTP verified",
+                new AuthResponse(
+                        jwtToken,
+                        request.getEmail(),
+                        request.getEmail(),
+                        null,
+                        true,
+                        false
+                ));
     }
 
     @Transactional
-    public ApiResponse resendOtp(String email) {
-        User user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+    public ApiResponse register(RegisterRequest request) {
 
         String otp = generateOTP();
-        user.setOtpCode(otp);
-        user.setOtpExpiry(LocalDateTime.now().plusMinutes(10));
-        userRepository.save(user);
 
-        emailService.sendOtpEmail(user.getEmail(), otp);
+        String k = key(request.getEmail());
 
-        return new ApiResponse(true, "OTP resent successfully", null);
+        otpStore.put(k, otp);
+        otpExpiryStore.put(k, LocalDateTime.now().plusMinutes(10));
+
+        emailService.sendOtpEmail(request.getEmail(), otp);
+
+        return new ApiResponse(true,"OTP sent",null);
     }
 
     @Transactional
     public ApiResponse requestLoginOtp(LoginRequest request) {
-        User user = userRepository.findByEmailAndIsActiveTrue(request.getEmail())
-                .orElseThrow(() -> new RuntimeException("User not found or inactive"));
 
-        String otp = generateOTP();
-        user.setOtpCode(otp);
-        user.setOtpExpiry(LocalDateTime.now().plusMinutes(10));
-        userRepository.save(user);
+            Company company = companyRepository
+                    .findByEmailAndIsActiveTrue(request.getEmail())
+                    .orElseThrow(() ->
+                            new RuntimeException("Company not found with this email"));
 
-        emailService.sendOtpEmail(user.getEmail(), otp);
 
-        return new ApiResponse(true, "OTP sent to your email", null);
+            String otp = generateOTP();
+
+        String k = key(request.getEmail());
+        otpStore.put(k, otp);
+        otpExpiryStore.put(k, LocalDateTime.now().plusMinutes(10));
+
+        emailService.sendOtpEmail(company.getEmail(), otp);
+
+        return new ApiResponse(true, "Login OTP sent successfully", null);
     }
-
     @Transactional
     public AuthResponse verifyLoginOtp(OtpRequest request) {
-        User user = userRepository.findByEmailAndIsActiveTrue(request.getEmail())
-                .orElseThrow(() -> new RuntimeException("User not found"));
 
-        if (!user.getIsVerified()) {
-            throw new RuntimeException("Email not verified. Please verify your email first.");
+            Company company = companyRepository
+                    .findByEmailAndIsActiveTrue(request.getEmail())
+                    .orElseThrow(() ->
+                            new RuntimeException("Company not found"));
+
+
+            String otpKey = key(request.getEmail());
+        String storedOtp = otpStore.get(otpKey);
+        LocalDateTime expiry = otpExpiryStore.get(otpKey);
+
+        if (storedOtp == null) {
+            throw new RuntimeException("OTP not requested");
         }
 
-        if (user.getOtpCode() == null || !user.getOtpCode().equals(request.getOtp())) {
+        if (!storedOtp.equals(request.getOtp())) {
             throw new RuntimeException("Invalid OTP");
         }
 
-        if (user.getOtpExpiry().isBefore(LocalDateTime.now())) {
+        if (expiry == null || expiry.isBefore(LocalDateTime.now())) {
             throw new RuntimeException("OTP expired");
         }
-        user.setOtpCode(null);
-        user.setOtpExpiry(null);
-        userRepository.save(user);
 
-        var jwtToken = jwtService.generateToken(
+        otpStore.remove(otpKey);
+        otpExpiryStore.remove(otpKey);
+
+        String jwtToken = jwtService.generateToken(
                 new org.springframework.security.core.userdetails.User(
-                        user.getEmail(),
+                        company.getEmail(),
                         "",
                         java.util.Collections.emptyList()
                 )
@@ -143,12 +173,11 @@ public class AuthService {
 
         return new AuthResponse(
                 jwtToken,
-                user.getName(),
-                user.getEmail(),
-                user.getRole().name(),
-                user.getUserId(),
-                user.getIsVerified(),
-                user.getProfileComplete()
+                company.getCompanyName(),
+                company.getEmail(),
+                company.getCompanyId(),
+                true,
+                true
         );
     }
 
@@ -157,4 +186,10 @@ public class AuthService {
         int otp = 100000 + random.nextInt(900000);
         return String.valueOf(otp);
     }
+    private static final Map<String, String> otpStore = new ConcurrentHashMap<>();
+    private static final Map<String, LocalDateTime> otpExpiryStore = new ConcurrentHashMap<>();
+    private String key(String email){
+        return email;
+    }
+
 }
